--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "symfony/dotenv": "^6.2",
         "symfony/flex": "^1.17 || ^2.0",
         "symfony/framework-bundle": "^6.2",
-        "symfony/mailer": "^6.2",
+        "symfony/mailer": "6.3.*",
+        "symfony/maker-bundle": "^1.51",
         "symfony/monolog-bridge": "^6.2",
         "symfony/monolog-bundle": "^3.4",
         "symfony/runtime": "^6.2",
