--- a/config/packages/sulu_core.yaml
+++ b/config/packages/sulu_core.yaml
@@ -1,7 +1,7 @@
 sulu_core:
     locales:
         fr: Français
-        en: English
+        # en: English
     translations:
         - fr
-        - en
+        # - en
