--- a/config/routes_admin.yaml
+++ b/config/routes_admin.yaml
@@ -2,3 +2,37 @@
 controllers:
     resource: ../src/Controller/Admin/
     type: attribute
+
+#---------------------------------------------------------------------------------------
+#       Admin routes
+#---------------------------------------------------------------------------------------
+
+app_articles:
+    type: rest
+    prefix: /admin/api
+    resource: App\Controller\Admin\ArticleController
+    name_prefix: app.
+
+app_teams:
+    type: rest
+    prefix: /admin/api
+    resource: App\Controller\Admin\TeamController
+    name_prefix: app.
+
+app_newsletters:
+    type: rest
+    prefix: /admin/api
+    resource: App\Controller\Admin\Newsletter\NewsletterController
+    name_prefix: app.
+
+app_newsletter_users:
+    type: rest
+    prefix: /admin/api
+    resource: App\Controller\Admin\Newsletter\NewsletterUserController
+    name_prefix: app.
+
+app_newsletter_categories:
+    type: rest
+    prefix: /admin/api
+    resource: App\Controller\Admin\Newsletter\NewsletterCategorieController
+    name_prefix: app.
