--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
         "symfony/framework-bundle": "^6.2",
         "symfony/mailer": "6.3.*",
         "symfony/maker-bundle": "^1.51",
+        "symfony/messenger": "6.3.*",
         "symfony/monolog-bridge": "^6.2",
         "symfony/monolog-bundle": "^3.4",
         "symfony/runtime": "^6.2",
