--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -1,15 +1,28 @@
 framework:
     messenger:
+        # reset services after consuming messages
+        #reset_on_message: true
+
         # Uncomment this (and the failed transport below) to send failed messages to this transport for later handling.
-        # failure_transport: failed
+        failure_transport: failed
 
         transports:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
-            # async: '%env(MESSENGER_TRANSPORT_DSN)%'
-            # failed: 'doctrine://default?queue_name=failed'
+            async: 
+                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+                retry_strategy:
+                    max_retries: 3
+            news: 
+                dsn: 'doctrine://default?queue_name=news'
+                retry_strategy:
+                    max_retries: 3
+                    
+            failed: 'doctrine://default?queue_name=failed'
             # sync: 'sync://'
 
         routing:
+            App\Message\SendNewsletterMessage: async
+            App\Message\NewsletterUserMessage: news
             # Route your messages to the transports
             # 'App\Message\YourMessage': async
 
