--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,7 +20,7 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/'
+        resource: '../src/*'
         exclude:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
@@ -49,7 +49,12 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
+    App\Service\MessengerService:
+        public: true
 
+    App\Service\SendNewsletterService:
+        public: true
+        
     App\EventSubscriber\DoctrineEventSubscriber:
         tags:
             - { name: 'doctrine.event_subscriber'}
