--- a/.env
+++ b/.env
@@ -34,16 +34,16 @@ LOCK_DSN=semaphore
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
-DATABASE_URL="mysql://root:ChangeMe@127.0.0.1:3306/su_myapp?serverVersion=8.0.27&charset=utf8mb4"
+DATABASE_URL="mysql://quantumtg_db_user:Pm!Am88P9bbA^8EyE^@127.0.0.1:3306/quantumtg_db?serverVersion=8.0.27&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> sulu/sulu ###
 # Email address that will receive system notifications and might be used as universal fallback value by bundles
-SULU_ADMIN_EMAIL=contact@quantum.com
+SULU_ADMIN_EMAIL=contact@quantum-togo.com
 ###< sulu/sulu ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN="smtp://no-reply@quantum-togo.com:DwSqW3n1GcvPHa@node18-ca.n0c.com:465"
 ###< symfony/mailer ###
 
 ###> symfony/messenger ###
