--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "sulu/sulu": "~2.5.10",
         "symfony/asset": "6.3.*",
         "symfony/config": "^6.2",
+        "symfony/dependency-injection": "6.3.*",
         "symfony/doctrine-messenger": "6.3.*",
         "symfony/dotenv": "^6.2",
         "symfony/flex": "^1.17 || ^2.0",
