--- a/.env
+++ b/.env
@@ -42,8 +42,9 @@ DATABASE_URL="mysql://quantumtg_db_user:Pm!Am88P9bbA^8EyE^@127.0.0.1:3306/quantu
 SULU_ADMIN_EMAIL=contact@quantum-togo.com
 ###< sulu/sulu ###
 
-###> symfony/mailer ###
-MAILER_DSN="smtp://no-reply@quantum-togo.com:DwSqW3n1GcvPHa@node18-ca.n0c.com:465"
+###> symfony/mailer ###+NN6E+NtQEt7EQg67S
+MAILER_DSN="smtp://no-reply@quantum-togo.com:%2BNN6E%2BNtQEt7EQg67S@node18-ca.n0c.com:465"
+
 ###< symfony/mailer ###
 
 ###> symfony/messenger ###
