--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -17,18 +17,18 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin/reset, roles: PUBLIC_ACCESS, requires_channel: https }
-        - { path: ^/admin/security/reset, roles: PUBLIC_ACCESS, requires_channel: https }
-        - { path: ^/admin/login$, roles: PUBLIC_ACCESS, requires_channel: https }
-        - { path: ^/admin/2fa, roles: PUBLIC_ACCESS, requires_channel: https }
-        - { path: ^/admin/_wdt, roles: PUBLIC_ACCESS, requires_channel: https }
-        - { path: ^/admin/_profiler, roles: PUBLIC_ACCESS, requires_channel: https }
-        - { path: ^/admin/translations, roles: PUBLIC_ACCESS, requires_channel: https }
-        - { path: ^/admin$, roles: PUBLIC_ACCESS, requires_channel: https }
-        - { path: ^/admin/$, roles: PUBLIC_ACCESS, requires_channel: https }
-        - { path: ^/admin/p/, roles: PUBLIC_ACCESS, requires_channel: https }
-        - { path: ^/admin, roles: ROLE_USER, requires_channel: https }
-        - { path: ^/, roles: PUBLIC_ACCESS, requires_channel: https }       
+        - { path: ^/admin/reset, roles: PUBLIC_ACCESS }
+        - { path: ^/admin/security/reset, roles: PUBLIC_ACCESS }
+        - { path: ^/admin/login$, roles: PUBLIC_ACCESS }
+        - { path: ^/admin/2fa, roles: PUBLIC_ACCESS }
+        - { path: ^/admin/_wdt, roles: PUBLIC_ACCESS }
+        - { path: ^/admin/_profiler, roles: PUBLIC_ACCESS }
+        - { path: ^/admin/translations, roles: PUBLIC_ACCESS }
+        - { path: ^/admin$, roles: PUBLIC_ACCESS }
+        - { path: ^/admin/$, roles: PUBLIC_ACCESS }
+        - { path: ^/admin/p/, roles: PUBLIC_ACCESS }
+        - { path: ^/admin, roles: ROLE_USER }
+        # - { path: ^/, roles: PUBLIC_ACCESS, requires_channel: https }       
 
 
     firewalls:
